Fixed white space between sections

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ header {
 body {
   margin: 0px;
   font-family: "Alegreya Sans", sans-serif;
-  font-size: 16px;
+  /*font-size: 16px;*/
   text-align: center;
   color: #fff;
 }
@@ -22,7 +22,7 @@ body {
 h1,
 h2 {
   font-family: "Alegreya", serif;
-  font-size: 36px;
+  /*font-size: 36px;*/
   color: #fff;
 }
 
@@ -35,7 +35,7 @@ h2 {
   font-variant-caps: all-small-caps;
   text-decoration: none;
   font-weight: 700;
-  font-size: 22px;
+  /*font-size: 22px;*/
 }
 nav {
   padding: 0px;
@@ -50,6 +50,7 @@ ul {
   background-color: #0a3641;
   position: sticky;
   padding-left: 0px;
+  margin: 0px;
 }
 
 li {
@@ -72,7 +73,7 @@ li {
   /*min-height: 40vh;*/
   background-size: cover;
   background-position: bottom;
-  padding-top: 40px;
+  padding-top: 5px;
 }
 
 .content h1,
@@ -93,7 +94,7 @@ li {
 }
 .main {
   background-image: url(../images/homepage/main-picture.jpg);
-  min-height: 100vh;
+  min-height: 90vh;
   background-position: center right;
   padding-top: 20px;
 }
